--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ body{
 .navigationmenu, .asideleft{
     background-color:hsl(260,11%,10%);
 }
-.navbutton, .navbutton:hover .dropbutton, .asidetitle, .maincontent, footer{
+.navbutton, .navbutton:hover .dropbutton, .asidetitle, .toc, .maincontent, footer{
     background-color:hsl(260,11%,20%);
 }
 .captionbox, .firstrow{
@@ -130,16 +130,27 @@ nav{
 /* Side elements */
 
 .asideleft{
-    position:relative;
+    position:fixed;
     float:left;
     width:10%;
     margin-top:0;
-    height:5000px;
+    height:100%;
     display:fixed;
     border-right:1px solid hsl(260,11%,40%);
+    z-index:3;
+    overflow:scroll;
 }
 .asidetitle{
     padding:.6em;
+    padding-left:5px;
+}
+.toc{
+    padding-left:15px;
+    margin-bottom:180px;
+    border-top:1px solid hsl(260,11%,40%);
+    border-bottom:1px solid hsl(260,11%,40%);
+}
+.subtoc{
     padding-left:5px;
 }
 .asideright{
@@ -229,11 +240,13 @@ th{
 /* Footer */
 
 footer{
+    position:absolute;
+    margin-top:200px;
     margin-bottom:0;
     display:table;
     width:100%;
     border-top:1px solid hsl(260,11%,40%);
 }
 footer p{
-    margin-left:5px;
+    margin-left:10.5%;
 }
