--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 
-
 body{
     margin:0;
     padding:0;
@@ -13,6 +12,7 @@ body{
     color:white;
     word-wrap: break-word;
     font-family:"Ubuntu", sans-serif;
+    box-sizing:border-box;
 }
 
 /* Colors of elements */
@@ -32,6 +32,9 @@ body{
 a{
     text-decoration: none;
 }
+a:hover{
+    text-decoration: underline;
+}
 a:link{
     color:lightskyblue;
 }
@@ -44,6 +47,36 @@ a:visited{
 
 /* Navigation */
 
+@media only screen and (max-width:960px){
+    /* Mobile */
+    .navigationmenu, .navbutton{
+        height:2.5em;
+    }
+    .navbutton, .dropbutton{
+        width:100px;
+    }    
+    .navlink{
+        font-size:14px;
+    }
+    .dropdown{
+        top:2.5em;
+    }
+}
+@media only screen and (min-width:960px){
+    /* Desktop */
+    .navigationmenu, .navbutton{
+        height:3em;
+    }
+    .navbutton, .dropbutton{
+        width:250px;
+    }    
+    .navlink{
+        font-size:20px;
+    }
+    .dropdown{
+        top:3em;
+    }
+}
 nav{
     position:sticky;
     top:0;
@@ -55,7 +88,6 @@ nav{
 }
 .navigationmenu{
     text-align:center;
-    height:3em;
     margin:0;
     font-size:1em;
     padding-left:0;
@@ -82,8 +114,6 @@ nav{
 }
 .navbutton{
     display:inline-block;
-    width:250px;
-    height:3em;
     padding:0;
     position: relative;
 }
@@ -96,7 +126,6 @@ nav{
     color:white !important;
     width:100%;
     position: absolute;
-    font-size:20px;
     margin: 0;
     top: 50%;
     left: 50%;
@@ -108,7 +137,6 @@ nav{
 .dropdown{
     display:none;
     position:relative;
-    top:3em;
     margin:0;
     z-index:3;
 }
@@ -122,7 +150,6 @@ nav{
     margin-left:-40px;
     margin-top:1px;
     margin-bottom:1px;
-    width:250px;
     height:1em;
     position:relative;
 }
@@ -203,6 +230,7 @@ nav{
     border:3px double hsl(260,11%,90%);
     margin:28px;
     padding:3px;
+    font-size:0;
 }
 .right{
     float:right;
@@ -215,10 +243,12 @@ nav{
 .caption{
     font-size:14px;
     display:block;
+    margin:1px;
     margin-top:0;
     margin-bottom:5px;
 }
 .articleimage{
+    margin:1px;
 }
 
 /* Tables */
@@ -241,7 +271,7 @@ th{
 
 footer{
     position:absolute;
-    margin-top:200px;
+    margin-top:400px;
     margin-bottom:0;
     display:table;
     width:100%;
