--- a/assets/style.css
+++ b/assets/style.css
@@ -47,8 +47,23 @@ a:visited{
 
 /* Navigation */
 
-@media only screen and (max-width:960px){
+@media only screen and (max-width:560px){
     /* Mobile */
+    .navigationmenu, .navbutton{
+        height:2em;
+    }
+    .navbutton, .dropbutton{
+        width:80px;
+    }    
+    .navlink{
+        font-size:12px;
+    }
+    .dropdown{
+        top:2em;
+    }
+}
+@media only screen and (min-width:560px) and (max-width:1200px){
+    /* Medium size */
     .navigationmenu, .navbutton{
         height:2.5em;
     }
@@ -56,13 +71,13 @@ a:visited{
         width:100px;
     }    
     .navlink{
-        font-size:14px;
+        font-size:16px;
     }
     .dropdown{
         top:2.5em;
     }
 }
-@media only screen and (min-width:960px){
+@media only screen and (min-width:1200px){
     /* Desktop */
     .navigationmenu, .navbutton{
         height:3em;
@@ -97,6 +112,7 @@ nav{
     display:inline-block;
 }
 .navlogo{
+    display:inline-block;
     float:left;
     margin-left:5px;
     margin-right:10%;
@@ -155,14 +171,35 @@ nav{
 }
 
 /* Side elements */
+@media only screen and (max-width:560px){
+    .asideleft{
+        display:none;
+        width:50%;
+    }
+    .navlogo:hover .asideleft{
+        display:fixed;
+    }
+}
+@media only screen and (min-width:560px) and (max-width:1200px){
+    .asideleft{
+        display:fixed;
+        width:10%;
+    }
+
+}
+@media only screen and (min-width:1200px){
+    .asideleft{
+        display:fixed;
+        width:10%;
+    }
+
+}
 
 .asideleft{
     position:fixed;
     float:left;
-    width:10%;
     margin-top:0;
     height:100%;
-    display:fixed;
     border-right:1px solid hsl(260,11%,40%);
     z-index:3;
     overflow:scroll;
