--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,9 @@ body{
 .captionbox, .firstrow{
     background-color:hsl(260,11%,30%);
 }
+footer{
+    color:hsl(260,11%,60%);
+}
 
 /* Hyperlinks */
 
@@ -175,9 +178,6 @@ nav{
     .asideleft{
         display:none;
         width:50%;
-    }
-    .navlogo:hover .asideleft{
-        display:fixed;
     }
 }
 @media only screen and (min-width:560px) and (max-width:1200px){
