--- a/assets/style.css
+++ b/assets/style.css
@@ -96,13 +96,13 @@ a:visited{
     }
 }
 nav{
-    position:sticky;
+    position:fixed;
     top:0;
     margin:0;
     width:100%;
     font-size:1em;
     border-bottom:1px solid hsl(260,11%,40%);
-    z-index:2;
+    z-index:3;
 }
 .navigationmenu{
     text-align:center;
@@ -157,7 +157,7 @@ nav{
     display:none;
     position:relative;
     margin:0;
-    z-index:3;
+    z-index:4;
 }
 .navbutton:hover .dropdown{
     display:block;
@@ -178,6 +178,8 @@ nav{
     .asideleft{
         display:none;
         width:50%;
+        padding-top:2em;
+        height:calc(100vh - 2em);
     }
     .asidetitle{
         font-size:12px;
@@ -185,8 +187,9 @@ nav{
 }
 @media only screen and (min-width:560px) and (max-width:1200px){
     .asideleft{
-        display:fixed;
         width:20%;
+        padding-top:2.5em;
+        height:calc(100vh - 2.5em);
     }
     .asidetitle{
         font-size:16px;
@@ -194,22 +197,20 @@ nav{
 }
 @media only screen and (min-width:1200px){
     .asideleft{
-        display:fixed;
         width:10%;
+        padding-top:3em;
+        height:calc(100vh - 3em);
     }
     .asidetitle{
         font-size:20px;
     }
-    .toc{
-    }
 }
 .asideleft{
-    position:fixed;
+    position:sticky;
+    top:0;
     float:left;
-    margin-top:0;
-    height:100%;
-    border-right:1px solid hsl(260,11%,40%);
-    z-index:3;
+    outline:1px solid hsl(260,11%,40%);
+    z-index:2;
     overflow:scroll;
 }
 .asidetitle{
@@ -229,11 +230,14 @@ nav{
 /* Main content */
 
 @media only screen and (max-width:560px){
-    .bigpageheader, .smallpageheader{
+    .maincolumn{
         margin:auto;
-        width:80%;
+        width:100%;
     }
-    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3{
+    .bigpageheader{
+        margin-top:1em;
+    }
+    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4{
         margin:auto;
         width:90%;
         margin-top:5px;
@@ -252,30 +256,39 @@ nav{
     }
 }
 @media only screen and (min-width:560px) and (max-width:1200px){
-    .bigpageheader, .smallpageheader, .maincontent{
-        padding-left:21%;
+    .maincolumn{
+        width:80%;
     }
-    .maincontent{
-        padding-right:5%;
-        padding-left:25%;
+    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4{
+        margin-right:5%;
+        margin-left:20px;
     }
     table{
         display:inline-block;
     }
 }
 @media only screen and (min-width:1200px){
-    .bigpageheader, .smallpageheader, .maincontent{
-        padding-left:11%;
+    .maincolumn{
+        /*padding-left:11%;*/
+        width:90%;
     }
-    .maincontent{
-        padding-right:20%;
+    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4{
+        margin-right:15%;
+        margin-left:20px;
+    }
+    .captionbox{
+        margin-right:15% !important;
     }
     table{
         display:inline-block;
     }
 }
-.bigpageheader, .smallpageheader, .maincontent{
+.maincolumn{
+    float:left;
     color:white;
+}
+.bigpageheader, .smallpageheader{
+    text-align:center;
 }
 .bigpageheader{
     font-size:64px;
@@ -287,6 +300,7 @@ nav{
 .maincontent{
     padding-top:5px;
     padding-bottom:5px;
+    margin-bottom:300px;
     border-top:1px solid hsl(260,11%,40%);
     border-bottom:1px solid hsl(260,11%,40%);
 }
@@ -315,8 +329,6 @@ nav{
     margin-right:0px;
 }
 .center{
-    margin-left:auto;
-    margin-right:auto;
 }
 .caption{
     font-size:14px;
@@ -332,7 +344,7 @@ nav{
 /* Tables */
 
 .wrapper{
-    margin:auto;
+    margin:28px;
 }
 table{
     border-collapse:collapse;
@@ -346,26 +358,13 @@ th{
 
 /* Footer */
 
-@media only screen and (max-width:560px){
-    footer p{
-        margin-left:0.5%;
-    }
-}
-@media only screen and (min-width:560px) and (max-width:1200px){
-    footer p{
-        margin-left:20.5%;
-    }
-}
-@media only screen and (min-width:1200px){
-    footer p{
-        margin-left:10.5%;
-    }
-}
 footer{
-    position:absolute;
-    margin-top:400px;
+    width:100%;
+    float:bottom;
     margin-bottom:0;
     display:table;
-    width:100%;
     border-top:1px solid hsl(260,11%,40%);
+    position:relative;
+    z-index:4;
+    padding-left:25px;
 }
