Footer minor fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -366,5 +366,7 @@ footer{
     border-top:1px solid hsl(260,11%,40%);
     position:relative;
     z-index:4;
-    padding-left:25px;
+}
+footer p{
+    margin-left:25px;
 }
