--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ body{
     width:100%;
     height:100%;
     line-height:1.5;
-    background:url(background.jpg);
+    background:url(background.webp);
     background-repeat:no-repeat;
     background-size:cover;
     background-attachment:fixed;
@@ -33,7 +33,7 @@ body{
     background-color:hsl(260,11%,30%);
 }
 footer{
-    color:hsl(260,11%,60%);
+    color:hsl(260,11%,80%);
 }
 
 /* Hyperlinks */
