Seven new pages, several updates in 2 years

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,42 @@ a:link{
 a:visited{
     color:mediumpurple;
 }
+a[href='ceres.html'],
+a[href='pluto.html'],
+a[href='eris.html'],
+a[href='haumea.html'],
+a[href='makemake.html'],
+a[href='satellites-of-mars.html'],
+a[href='satellites-of-jupiter.html'],
+a[href='satellites-of-saturn.html'],
+a[href='satellites-of-uranus.html'],
+a[href='satellites-of-neptune.html'],
+a[href='phobos.html'],
+a[href='deimos.html'],
+a[href='titan.html'],
+a[href='rhea.html'],
+a[href='iapetus.html'],
+a[href='dione.html'],
+a[href='tethys.html'],
+a[href='enceladus.html'],
+a[href='mimas.html'],
+a[href='titania.html'],
+a[href='oberon.html'],
+a[href='umbriel.html'],
+a[href='ariel.html'],
+a[href='miranda.html'],
+a[href='triton.html'],
+a[href='charon.html'],
+a[href='dysnomia.html'],
+a[href='gonggong.html'],
+a[href='quaoar.html'],
+a[href='sedna.html'],
+a[href='orcus.html'],
+a[href='asteroid.html'],
+a[href='vesta.html'],
+a[href='comet.html']{
+    color:lightsalmon;
+}
 .readmore{
     margin-left:2em;
 }
