Pluto, expanded Mars, Saturn, Jupiter

--- a/_includes/tocjupiter.html
+++ b/_includes/tocjupiter.html
@@ -22,7 +22,7 @@
     </ul>
 </li>
 <li>
-    <a href="#Moons">Moons</a>
+    <a href="#Satellites">Satellites</a>
     <ul class="subtoc">
         <li>
             <a href="#Ganymede">Ganymede</a>
@@ -35,6 +35,9 @@
         </li>
         <li>
             <a href="#Europa">Europa</a>
+        </li>
+        <li>
+            <a href="#InnerMoons">Inner moons</a>
         </li>
     </ul>
 </li>
