--- a/_includes/tocmars.html
+++ b/_includes/tocmars.html
@@ -5,6 +5,9 @@
     <a href="#OrbitAndRotation">Orbit and rotation</a>
 </li>
 <li>
+    <a href="#NaturalHistory">Natural history</a>
+</li>
+<li>
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
     <ul class="subtoc">
         <li>
@@ -32,6 +35,17 @@
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#SpaceRace">Space race</a>
+        </li>
+        <li>
+            <a href="#AfterTheColdWar">After the Cold War</a>
+        </li>
+        <li>
+            <a href="#FutureMissions">Future missions</a>
+        </li>
+    </ul>
 </li>
 <li>
     <a href="#HabitabilityAndColonisation">Habitability and colonisation</a>
