--- a/_includes/tocpluto.html
+++ b/_includes/tocpluto.html
@@ -3,6 +3,11 @@
 </li>
 <li>
     <a href="#Discovery">Discovery</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#Reclassification">Reclassification</a>
+        </li>
+    </ul>
 </li>
 <li>
     <a href="#OrbitAndRotation">Orbit and rotation</a>
@@ -17,23 +22,18 @@
             <a href="#InternalStructure">Internal structure</a>
         </li>
         <li>
-            <a href="#InternalStructure">Subsurface ocean</a>
-        </li>
-        <li>
             <a href="#ExternalStructure">External structure</a>
         </li>
+        <li>
+            <a href="#Atmosphere">Atmosphere</a>
+        </li>
     </ul>
+</li>
+<li>
+    <a href="#Satellites">Satellites</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
-    <ul class="subtoc">
-        <li>
-            <a href="#FutureMissions">Future missions</a>
-        </li>
-    </ul>
-</li>
-<li>
-    <a href="#Habitability">Habitability</a>
 </li>
 <li>
     <a href="#ExternalLinks">External links</a>
