--- a/_includes/tocsaturn.html
+++ b/_includes/tocsaturn.html
@@ -22,7 +22,7 @@
     </ul>
 </li>
 <li>
-    <a href="#Moons">Moons</a>
+    <a href="#Satellites">Satellites</a>
     <ul class="subtoc">
         <li>
             <a href="#Titan">Titan</a>
@@ -44,6 +44,12 @@
         </li>
         <li>
             <a href="#Mimas">Mimas</a>
+        </li>
+        <li>
+            <a href="#OtherRegularMoons">Other regular moons</a>
+        </li>
+        <li>
+            <a href="#OuterMoons">Outer moons</a>
         </li>
     </ul>
 </li>
