--- a/_includes/tocsolar-system.html
+++ b/_includes/tocsolar-system.html
@@ -1,6 +1,32 @@
-<!--<li>
+<li>
     <a href="#Formation">Formation</a>
-</li>-->
+</li>
+<li>
+    <a href="#Regions">Region</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#Sun">Sun</a>
+        </li>
+        <li>
+            <a href="#InnerPlanets">Inner planets</a>
+        </li>
+        <li>
+            <a href="#AsteroidBelt">Asteroid belt</a>
+        </li>
+        <li>
+            <a href="#OuterPlanets">Outer planets</a>
+        </li>
+        <li>
+            <a href="#TransNeptunianRegions">Trans Neptunian regions</a>
+        </li>
+        <li>
+            <a href="#HeliosphereAndOortCloud">Heliosphere and Oort cloud</a>
+        </li>
+        <li>
+            <a href="#Comets">Comets</a>
+        </li>
+    </ul>
+</li>
 <li>
     <a href="#ExternalLinks">External links</a>
 </li>
