Ceres, Titan, Enceladus, Triton; updated Mercury

--- a/_includes/tocenceladus.html
+++ b/_includes/tocenceladus.html
@@ -3,11 +3,6 @@
 </li>
 <li>
     <a href="#Discovery">Discovery</a>
-    <ul class="subtoc">
-        <li>
-            <a href="#Reclassification">Reclassification</a>
-        </li>
-    </ul>
 </li>
 <li>
     <a href="#OrbitAndRotation">Orbit and rotation</a>
@@ -22,15 +17,12 @@
             <a href="#InternalStructure">Internal structure</a>
         </li>
         <li>
-            <a href="#Surface">Surface</a>
+            <a href="#ExternalStructure">External structure</a>
         </li>
         <li>
-            <a href="#Atmosphere">Atmosphere</a>
+            <a href="#SubsurfaceOcean">Subsurface ocean</a>
         </li>
     </ul>
-</li>
-<li>
-    <a href="#Satellites">Satellites</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
