--- a/_includes/tocio.html
+++ b/_includes/tocio.html
@@ -17,7 +17,7 @@
             <a href="#InternalStructure">Internal structure</a>
         </li>
         <li>
-            <a href="#ExternalStructure">External structure</a>
+            <a href="#Surface">Surface</a>
         </li>
         <li>
             <a href="#VolcanicActivity">Volcanic Activity</a>
