--- a/_includes/tocmercury.html
+++ b/_includes/tocmercury.html
@@ -16,6 +16,9 @@
         <li>
             <a href="#ExternalStructure">External structure</a>
         </li>
+        <li>
+            <a href="#Magnetosphere">Magnetosphere</a>
+        </li>
     </ul>
 </li>
 <li>
