--- a/_includes/toctitan.html
+++ b/_includes/toctitan.html
@@ -3,11 +3,6 @@
 </li>
 <li>
     <a href="#Discovery">Discovery</a>
-    <ul class="subtoc">
-        <li>
-            <a href="#Reclassification">Reclassification</a>
-        </li>
-    </ul>
 </li>
 <li>
     <a href="#OrbitAndRotation">Orbit and rotation</a>
@@ -25,12 +20,12 @@
             <a href="#Surface">Surface</a>
         </li>
         <li>
+            <a href="#Hydrocarbons">Hydrocarbons</a>
+        </li>
+        <li>
             <a href="#Atmosphere">Atmosphere</a>
         </li>
     </ul>
-</li>
-<li>
-    <a href="#Satellites">Satellites</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
