--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,6 @@ a:link{
 a:visited{
     color:mediumpurple;
 }
-a[href='ceres.html'],
 a[href='eris.html'],
 a[href='haumea.html'],
 a[href='makemake.html'],
@@ -61,19 +60,18 @@ a[href='satellites-of-uranus.html'],
 a[href='satellites-of-neptune.html'],
 a[href='phobos.html'],
 a[href='deimos.html'],
-a[href='titan.html'],
 a[href='rhea.html'],
 a[href='iapetus.html'],
 a[href='dione.html'],
 a[href='tethys.html'],
-a[href='enceladus.html'],
 a[href='mimas.html'],
+a[href='hyperion.html'],
 a[href='titania.html'],
 a[href='oberon.html'],
 a[href='umbriel.html'],
 a[href='ariel.html'],
 a[href='miranda.html'],
-a[href='triton.html'],
+a[href='proteus.html'],
 a[href='charon.html'],
 a[href='dysnomia.html'],
 a[href='gonggong.html'],
@@ -84,8 +82,6 @@ a[href='asteroid.html'],
 a[href='vesta.html'],
 a[href='comet.html'],
 a[href='centaur.html'],
-a[href='hyperion.html'],
-a[href='proteus.html'],
 a[href='trojan.html']{
     color:lightsalmon;
 }
@@ -280,17 +276,27 @@ nav{
         width:100%;
     }
     .bigpageheader{
+        font-size:48px;
+    }
+    .bigpageheader{
         margin-top:1em;
     }
-    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4, .mapdiv{
+    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4, .maincontent table, .mapdiv{
         margin:auto;
         width:90%;
         margin-top:5px;
         margin-bottom:5px;
     }
+    .paragraph, .readmore{
+        font-size:14px;
+    }
     .maincontent .captionbox{
         margin-right:5%;
         margin-left:5%;
+    }
+    .imgwrapper .captionbox{
+        margin-right:2.5% !important;
+        margin-left:2.5% !important;
     }
     .wrapper{
         margin:auto;
@@ -304,9 +310,19 @@ nav{
     .maincolumn{
         width:80%;
     }
-    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4, .mapdiv{
+    .bigpageheader{
+        font-size:48px;
+    }
+    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4, .maincontent table, .mapdiv{
         margin-right:2.5%;
         margin-left:2.5%;
+    }
+    .paragraph, .readmore{
+        font-size:16px;
+    }
+    .imgwrapper .captionbox{
+        margin-right:2.5% !important;
+        margin-left:2.5% !important;
     }
     .captionbox{
         margin-right:2.5% !important;
@@ -323,9 +339,19 @@ nav{
         /*padding-left:11%;*/
         width:90%;
     }
-    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4, .mapdiv{
+    .bigpageheader{
+        font-size:64px;
+    }
+    .maincontent p, .maincontent ol, .maincontent ul, .maincontent h2, .maincontent h3, .maincontent h4, .maincontent table, .mapdiv{
         margin-right:5%;
         margin-left:5%;
+    }
+    .paragraph, .readmore{
+        font-size:18px;
+    }
+    .imgwrapper .captionbox{
+        margin-right:2.5% !important;
+        margin-left:2.5% !important;
     }
     .captionbox{
         margin-right:5% !important;
@@ -345,7 +371,6 @@ nav{
     text-align:center;
 }
 .bigpageheader{
-    font-size:64px;
     margin-bottom:0px;
 }
 .smallpageheader{
@@ -360,12 +385,10 @@ nav{
 }
 .paragraphheader, .paragraphsubheader{
     color:white;
+    margin-top:0px;
 }
 .articlediv{
     overflow:auto;
-}
-.paragraph{
-    font-size:18px;
 }
 
 /* Images */
