--- a/_includes/tocasteroid-belt.html
+++ b/_includes/tocasteroid-belt.html
@@ -2,6 +2,9 @@
     <a href="#DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</a>
 </li>
 <li>
+    <a href="#Groups">Groups</a>
+</li>
+<li>
     <a href="#AsteroidsOfTheAsteroidBelt">Asteroids of the asteroid belt</a>
     <ul class="subtoc">
         <li>
@@ -9,6 +12,12 @@
         </li>
         <li>
             <a href="#Vesta">Vesta</a>
+        </li>
+        <li>
+            <a href="#Pallas">Pallas</a>
+        </li>
+        <li>
+            <a href="#Hygiea">Hygiea</a>
         </li>
     </ul>
 </li>
