Satellites of planets pages, homepage, Mars interactive map

--- a/_includes/tocindex.html
+++ b/_includes/tocindex.html
@@ -4,3 +4,11 @@
 <li>
     <a href="#WhatDoesGabrovaMean">What does Gabrova mean?</a>
 </li>
+<li>
+    <a href="#FeaturedArticles">Featured articles</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#Planets">Planets</a>
+        </li>
+    </ul>
+</li>
