--- a/_includes/tocmars.html
+++ b/_includes/tocmars.html
@@ -48,7 +48,7 @@
     </ul>
 </li>
 <li>
-    <a href="#HabitabilityAndColonisation">Habitability and colonisation</a>
+    <a href="#HabitabilityAndColonisation">Habitability and colonization</a>
 </li>
 <li>
     <a href="#ExternalLinks">External links</a>
