--- a/assets/style.css
+++ b/assets/style.css
@@ -23,10 +23,10 @@ body{
 
 /* Colors of elements */
 
-.navigationmenu, .asideleft, .mapdiv{
+.navigationmenu, aside, .mapdiv{
     background-color:hsl(260,11%,10%);
 }
-.navbutton, .navbutton:hover .dropbutton, .asidetitle, .toc, .maincontent, footer{
+.navbutton, .featuredbutton, .navbutton:hover .dropbutton, .asidetitle, .toc, .maincontent, footer{
     background-color:hsl(260,11%,20%);
 }
 .captionbox, .firstrow{
@@ -34,6 +34,9 @@ body{
 }
 footer{
     color:hsl(260,11%,80%);
+}
+.navbutton:hover, .navbutton:hover .dropbutton:hover, .featuredbutton:hover{
+    background-color:rgb(55,45,96);
 }
 
 /* Hyperlinks */
@@ -53,11 +56,6 @@ a:visited{
 a[href='eris.html'],
 a[href='haumea.html'],
 a[href='makemake.html'],
-a[href='satellites-of-mars.html'],
-a[href='satellites-of-jupiter.html'],
-a[href='satellites-of-saturn.html'],
-a[href='satellites-of-uranus.html'],
-a[href='satellites-of-neptune.html'],
 a[href='phobos.html'],
 a[href='deimos.html'],
 a[href='rhea.html'],
@@ -92,7 +90,7 @@ a[href='trojan.html']{
 
 @media only screen and (max-width:560px){
     /* Mobile */
-    .navigationmenu, .navbutton{
+    .navigationmenu, .navbutton, .featuredbutton{
         height:2em;
     }
     .navbutton, .dropbutton{
@@ -107,7 +105,7 @@ a[href='trojan.html']{
 }
 @media only screen and (min-width:561px) and (max-width:1200px){
     /* Medium size */
-    .navigationmenu, .navbutton{
+    .navigationmenu, .navbutton, .featuredbutton{
         height:2.5em;
     }
     .navbutton, .dropbutton{
@@ -122,7 +120,7 @@ a[href='trojan.html']{
 }
 @media only screen and (min-width:1201px){
     /* Desktop */
-    .navigationmenu, .navbutton{
+    .navigationmenu, .navbutton, .featuredbutton{
         height:3em;
     }
     .navbutton, .dropbutton{
@@ -151,9 +149,6 @@ nav{
     padding-left:0;
     padding-right:0;
 }
-.navlogo, .navbutton{
-    display:inline-block;
-}
 .navlogo{
     display:inline-block;
     float:left;
@@ -163,7 +158,7 @@ nav{
 
 /* Buttons */
 
-.navbutton, .dropbutton{
+.navbutton, .dropbutton, .featuredbutton{
     display:block;
     padding-top:5px;
     padding-bottom:5px;
@@ -172,12 +167,15 @@ nav{
     outline:1px solid hsl(260,11%,40%);
 }
 .navbutton{
-    display:inline-block;
-    padding:0;
     position: relative;
+    padding:0;
+    display:inline-block;
 }
-.navbutton:hover, .navbutton:hover .dropbutton:hover{
-    background-color:rgb(55,45,96);
+.featuredbutton{
+    margin:5px;
+    position: relative;
+    padding:15px 0px;
+    text-align:center;
 }
 .navlink{
     text-decoration:none;
@@ -199,10 +197,7 @@ nav{
     margin:0;
     z-index:4;
 }
-.navbutton:hover .dropdown{
-    display:block;
-}
-.dropdown ul{
+.navbutton:hover .dropdown, .dropdown ul{
     display:block;
 }
 .dropbutton{
@@ -215,7 +210,7 @@ nav{
 
 /* Side elements */
 @media only screen and (max-width:560px){
-    .asideleft{
+    aside{
         display:none;
         width:50%;
         padding-top:2em;
@@ -226,7 +221,7 @@ nav{
     }
 }
 @media only screen and (min-width:561px) and (max-width:1200px){
-    .asideleft{
+    aside{
         width:20%;
         padding-top:2.5em;
         height:calc(100vh - 2.5em);
@@ -236,7 +231,7 @@ nav{
     }
 }
 @media only screen and (min-width:1201px){
-    .asideleft{
+    aside{
         width:10%;
         padding-top:3em;
         height:calc(100vh - 3em);
@@ -245,7 +240,7 @@ nav{
         font-size:20px;
     }
 }
-.asideleft{
+aside{
     position:sticky;
     top:0;
     float:left;
@@ -301,6 +296,10 @@ nav{
         margin:auto;
         width:90%;
     }
+    .clip{
+        width:120px;
+        height:120px;
+    }
     table{
         font-size:10px;
     }
@@ -328,6 +327,10 @@ nav{
     }
     .center{
         margin-left:2.5% !important;
+    }
+    .clip{
+        width:180px;
+        height:180px;
     }
     table{
         display:inline-block;
@@ -357,6 +360,10 @@ nav{
     }
     .center{
         margin-left:5% !important;
+    }
+    .clip{
+        width:240px;
+        height:240px;
     }
     table{
         display:inline-block;
@@ -426,8 +433,15 @@ nav{
     margin-top:0;
     margin-bottom:5px;
 }
+
+/* Images */
+
 .articleimage, .articlevideo{
     margin:1px;
+}
+
+.clip{
+    object-fit: cover;
 }
 
 /* Tables */
