--- a/assets/style.css
+++ b/assets/style.css
@@ -63,16 +63,15 @@ a[href='makemake.html'],
 a[href='phobos.html'],
 a[href='deimos.html'],
 a[href='rhea.html'],
-a[href='iapetus.html'],
 a[href='dione.html'],
 a[href='tethys.html'],
 a[href='mimas.html'],
 a[href='hyperion.html'],
+a[href='phoebe.html'],
 a[href='titania.html'],
 a[href='oberon.html'],
 a[href='umbriel.html'],
 a[href='ariel.html'],
-a[href='miranda.html'],
 a[href='proteus.html'],
 a[href='charon.html'],
 a[href='dysnomia.html'],
@@ -80,7 +79,10 @@ a[href='gonggong.html'],
 a[href='quaoar.html'],
 a[href='sedna.html'],
 a[href='orcus.html'],
+a[href='salacia.html'],
 a[href='vesta.html'],
+a[href='pallas.html'],
+a[href='hygiea.html'],
 a[href='comet.html'],
 a[href='centaur.html'],
 a[href='trojan.html']{
@@ -441,33 +443,51 @@ aside{
     .caption{
         font-size:8px;
     }
+    .h360 img{
+        height:150px;
+    }
+    .h300 img{
+        height:125px;
+    }
     .h240 img{
         height:100px;
     }
     .h180 img{
-        height:50px;
+        height:75px;
     }
     .h120 img{
-        height:25px;
+        height:50px;
     }
 }
 @media only screen and (min-width:561px) and (max-width:1200px){
     .caption{
         font-size:11px;
     }
+    .h360 img{
+        height:240px;
+    }
+    .h300 img{
+        height:200px;
+    }
     .h240 img{
-        height:120px;
+        height:160px;
     }
     .h180 img{
-        height:60px;
+        height:120px;
     }
     .h120 img{
-        height:40px;
+        height:80px;
     }
 }
 @media only screen and (min-width:1201px){
     .caption{
         font-size:14px;
+    }
+    .h360 img{
+        height:360px;
+    }
+    .h300 img{
+        height:300px;
     }
     .h240 img{
         height:240px;
