Three new pages, updated Moon and star pages, responsive images tweak, tables can scroll

--- a/_includes/toceris.html
+++ b/_includes/toceris.html
@@ -1,10 +1,5 @@
 <li>
     <a href="#Discovery">Discovery</a>
-    <ul class="subtoc">
-        <li>
-            <a href="#Reclassification">Reclassification</a>
-        </li>
-    </ul>
 </li>
 <li>
     <a href="#Name">Name</a>
@@ -19,18 +14,12 @@
             <a href="#Size">Size</a>
         </li>
         <li>
-            <a href="#InternalStructure">Internal structure</a>
-        </li>
-        <li>
-            <a href="#Surface">Surface</a>
-        </li>
-        <li>
-            <a href="#Atmosphere">Atmosphere</a>
+            <a href="#Structure">Structure</a>
         </li>
     </ul>
-</li>
 <li>
-    <a href="#Satellites">Satellites</a>
+    <a href="#Dysnomia">Dysnomia</a>
+</li>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
