--- a/_includes/tocstar.html
+++ b/_includes/tocstar.html
@@ -1,4 +1,10 @@
 <li>
+    <a href="#Observation">Observation</a>
+</li>
+<li>
+    <a href="#LifeCycle">Life cycle</a>
+</li>
+<li>
     <a href="#Classification">Classification</a>
 </li>
 <li>
