--- a/_includes/toccharon.html
+++ b/_includes/toccharon.html
@@ -1,10 +1,5 @@
 <li>
     <a href="#Discovery">Discovery</a>
-    <ul class="subtoc">
-        <li>
-            <a href="#Reclassification">Reclassification</a>
-        </li>
-    </ul>
 </li>
 <li>
     <a href="#Name">Name</a>
@@ -22,15 +17,9 @@
             <a href="#InternalStructure">Internal structure</a>
         </li>
         <li>
-            <a href="#Surface">Surface</a>
-        </li>
-        <li>
-            <a href="#Atmosphere">Atmosphere</a>
+            <a href="#ExternalStructure">External structure</a>
         </li>
     </ul>
-</li>
-<li>
-    <a href="#Satellites">Satellites</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
