--- a/_includes/tochaumea.html
+++ b/_includes/tochaumea.html
@@ -1,10 +1,5 @@
 <li>
     <a href="#Discovery">Discovery</a>
-    <ul class="subtoc">
-        <li>
-            <a href="#Reclassification">Reclassification</a>
-        </li>
-    </ul>
 </li>
 <li>
     <a href="#Name">Name</a>
@@ -16,21 +11,18 @@
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
     <ul class="subtoc">
         <li>
-            <a href="#Size">Size</a>
+            <a href="#SizeAndShape">Size and shape</a>
         </li>
         <li>
-            <a href="#InternalStructure">Internal structure</a>
-        </li>
-        <li>
-            <a href="#Surface">Surface</a>
-        </li>
-        <li>
-            <a href="#Atmosphere">Atmosphere</a>
+            <a href="#Structure">Structure</a>
         </li>
     </ul>
-</li>
 <li>
     <a href="#Satellites">Satellites</a>
+</li>
+<li>
+    <a href="#Rings">Rings</a>
+</li>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
