--- a/_includes/tocmoon.html
+++ b/_includes/tocmoon.html
@@ -14,6 +14,23 @@
 </li>
 <li>
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#Size">Size</a>
+        </li>
+        <li>
+            <a href="#InternalStructure">Internal structure</a>
+        </li>
+        <li>
+            <a href="#Surface">Surface</a>
+        </li>
+        <li>
+            <a href="#LunarMaria">Lunar maria</a>
+        </li>
+        <li>
+            <a href="#AtmosphereAndHydrosphere">Atmosphere and hydrosphere</a>
+        </li>
+    </ul>
 </li>
 <li>
     <a href="#EarlyObservations">Early observations</a>
