--- a/_includes/tocmimas.html
+++ b/_includes/tocmimas.html
@@ -17,7 +17,7 @@
             <a href="#InternalStructure">Internal structure</a>
         </li>
         <li>
-            <a href="#Surface">Surface</a>
+            <a href="#ExternalStructure">IExternal structure</a>
         </li>
     </ul>
 </li>
