Makemake, comet, Vesta

--- a/_includes/tocmakemake.html
+++ b/_includes/tocmakemake.html
@@ -11,7 +11,7 @@
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
     <ul class="subtoc">
         <li>
-            <a href="#SizeAndShape">Size and shape</a>
+            <a href="#Size">Size</a>
         </li>
         <li>
             <a href="#Structure">Structure</a>
@@ -19,10 +19,7 @@
     </ul>
 </li>
 <li>
-    <a href="#Satellites">Satellites</a>
-</li>
-<li>
-    <a href="#Rings">Rings</a>
+    <a href="#satellite">Satellite</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
