--- a/_includes/tocvesta.html
+++ b/_includes/tocvesta.html
@@ -11,18 +11,15 @@
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
     <ul class="subtoc">
         <li>
-            <a href="#SizeAndShape">Size and shape</a>
+            <a href="#ShapeAndSize">Shape and size</a>
         </li>
         <li>
-            <a href="#Structure">Structure</a>
+            <a href="#InternalStructure">Internal structure</a>
+        </li>
+        <li>
+            <a href="#ExternalStructure">External structure</a>
         </li>
     </ul>
-</li>
-<li>
-    <a href="#Satellites">Satellites</a>
-</li>
-<li>
-    <a href="#Rings">Rings</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
